<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="no_1">1</string>
    <string name="fiveDollar">5</string>
    <string name="toppings">Toppings</string>
    <string name="whipped">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>

    <string name="email_name">Name: <xliff:g id="name" example="Evie">%s</xliff:g></string>
    <string name="email_cream">Add whipped cream? <xliff:g id="whipped" example="true">%s</xliff:g></string>
    <string name="email_chocolate">Add chocolate? <xliff:g id="chocolate" example="true">%s</xliff:g></string>
    <string name="email_quantity">Quantity: <xliff:g id="quantity" example="5">%s</xliff:g></string>
    <string name="email_total">Total: <xliff:g id="price" example="25">%s</xliff:g></string>
    <string name="email_thanks">Thank you!</string>
</resources>
